# bbTalkie

./: .gitignore  README_EN.md
CAD/: Bottom.stl  led_case.stl  led_pmma.dxf
PCB/: BOM_bbTalkie.csv  PickAndPlace_bbTalkie.csv  ProPrj_bbTalkie.epro2
assets/: byebye.psd
esp-idf/components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.new  esp_board_init.c
esp-idf/components/hardware_driver/boards/esp32s3-bbtalkie/: bsp_board.c
esp-idf/components/hardware_driver/boards/include/: bsp_board.h  esp32_s3_bbtalkie_board.h
esp-idf/src/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
esp-idf/src/components/esp32-spi-ssd1327/: CMakeLists.txt  esp32-spi-ssd1327.c  esp32-spi-ssd1327.h
esp-idf/src/main/: CMakeLists.txt  idf_component.yml  main.c
esp-idf/src/main/include/: animation.h  bleCamera.h  command_map.h  led.h  simple_adpcm.h  sound.h
esp-idf/src/main/include/fonts/: fusion_pixel.h
esp-idf/src/main/include/images/: battery.h  home.h  idle.h  logo.h  mic.h  test.h  volume.h
tests/ESP_SR_AEC_TEST/: ESP_SR_AEC_TEST.ino
tests/PC_audioReciver/: audioReciverG711.py  audioReciverRAW.py
tests/Simple_tone_and_mic_test/: Simple_tone_and_mic_test.ino
tools/: generateFont.html  generateImage.html  lottieConverter.html
